RESOLVED FIXED151757
[WinCairo][MediaFoundation] Video is not rendered correctly on some graphics cards.
https://bugs.webkit.org/show_bug.cgi?id=151757
Summary [WinCairo][MediaFoundation] Video is not rendered correctly on some graphics ...
peavo
Reported 2015-12-02 10:44:01 PST
We need to make sure we use the same bitmap format as in the Direct3D surface in video memory when copying surface data and rendering with Cairo.
Attachments
Patch (3.56 KB, patch)
2015-12-02 10:47 PST, peavo
no flags
peavo
Comment 1 2015-12-02 10:47:51 PST
Alex Christensen
Comment 2 2015-12-02 11:03:42 PST
Comment on attachment 266453 [details] Patch This makes the video play on my NVIDIA GeForce GT 750M graphics card. It didn't work before.
peavo
Comment 3 2015-12-02 11:19:29 PST
(In reply to comment #2) > Comment on attachment 266453 [details] > Patch > > This makes the video play on my NVIDIA GeForce GT 750M graphics card. It > didn't work before. Good news! Thanks for reviewing :)
WebKit Commit Bot
Comment 4 2015-12-02 11:46:40 PST
Comment on attachment 266453 [details] Patch Clearing flags on attachment: 266453 Committed r192951: <http://trac.webkit.org/changeset/192951>
WebKit Commit Bot
Comment 5 2015-12-02 11:46:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.