[WinCairo][MediaFoundation] Video is not rendered correctly on some graphics cards. https://bugs.webkit.org/show_bug.cgi?id=151757

Reviewed by Alex Christensen.

We need to make sure we use the same bitmap format as in the Direct3D surface
in video memory when copying surface data and rendering with Cairo.

* platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
(WebCore::MediaPlayerPrivateMediaFoundation::Direct3DPresenter::presentSample):
(WebCore::MediaPlayerPrivateMediaFoundation::Direct3DPresenter::paintCurrentFrame):


Canonical link: https://commits.webkit.org/169897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192951 268f45cc-cd09-0410-ab3c-d52691b4dbfc